fixed stats modal to fit on screen on mobile

--- a/src/styles/StatsModal.scss
+++ b/src/styles/StatsModal.scss
@@ -14,6 +14,8 @@
   height: fit-content;
   min-width: 150px;
   gap: 3vh;
+  max-height: 98vh;
+  max-width: 98vw;
 }
 
 .statsHeader {
@@ -32,6 +34,15 @@
   align-items: center;
   justify-content: center;
   gap: 0.6rem;
+}
+
+@media only screen and (max-height: 900px) {
+  .profile {
+    display: none;
+  }
+  .statsHeader {
+    line-height: 40px !important;
+  }
 }
 
 .profileIconContainer {
